style.css
@font-face {
  font-family: "JMH Typewriter";
  src: url(../../../landing-page/Landing-Page/Fonts/JMH\ Typewriter.ttf);
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: rgb(21, 20, 22);
}

/*.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  border-radius: 25px;
  background-color: rgb(68, 67, 70);
  width: 100%;
}*/

.banner {
  width: 999px;
  height: 300px;
  border-radius: 2%;
}

.title {
  display: flex;
  flex-direction: column;
  font-family: "JMH Typewriter", Arial, Helvetica;
  font-size: 60px;
  align-items: center;
  justify-content: center;
  margin: 0px;
}

.logo {
  width: 500px;
  height: 125px;
  padding: 0px;
  margin: 0px;
}

.intro {
  display: flex;
  flex-direction: column;
}

.introduction {
  margin-top: 50px;
  font-family: "JMH Typewriter", Arial, Helvetica;
  font-size: 20px;
  color: white;
}

.buttons {
  display: flex;
  justify-content: space-around;
  margin: 50px;
  padding: 30px 80px;
  border-style: solid;
  border-color: whitesmoke;
  border-width: 4px;
  border-radius: 15px;
}

.btn {
  display: flex;
  justify-content: center;
  max-width: 200px;
  /*box-shadow: 0 0 1rem #c8f0ca;*/
}

.fist {
  margin-right: 20px;
  border-radius: 10%;
}

.sheet {
  margin-right: 20px;
  border-radius: 10%;
}

.slice {
  border-radius: 10%;
}

.hover {
  transform: scale(1.2);
  box-shadow: inset 0 0 1rem #042fee;
}

.clicked {
  transform: scale(1.4);
  box-shadow: inset 0 0 1rem rgb(2, 190, 2);
}

